--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,15 @@ dependencies {
     compile "org.grails.plugins:cache"
     compile "org.grails.plugins:scaffolding"
     compile "org.grails.plugins:hibernate5"
+
+    //Added for Spring Security Core plugin
+    compile 'org.grails.plugins:spring-security-core:3.1.2'
+
+    //Added for Spring Security UI Plugin
+    compile 'org.grails.plugins:spring-security-ui:3.0.0.M2'
+
+
+
     compile "org.hibernate:hibernate-core:5.1.3.Final"
     compile "org.hibernate:hibernate-ehcache:5.1.3.Final"
     console "org.grails:grails-console"
@@ -47,7 +56,7 @@ dependencies {
     testRuntime "org.seleniumhq.selenium:selenium-htmlunit-driver:2.47.1"
     testRuntime "net.sourceforge.htmlunit:htmlunit:2.18"
 
-    compile 'org.grails.plugins:spring-security-core:3.1.2'
+
 
 }
 
