--- a/build.gradle
+++ b/build.gradle
@@ -43,7 +43,8 @@ dependencies {
     //Added for Spring Security UI Plugin
     compile 'org.grails.plugins:spring-security-ui:3.0.0.M2'
 
-
+    //Added for user registration email validation
+    compile 'org.grails.plugins:mail:2.0.0.RC6'
 
     compile "org.hibernate:hibernate-core:5.1.3.Final"
     compile "org.hibernate:hibernate-ehcache:5.1.3.Final"
@@ -55,9 +56,6 @@ dependencies {
     testCompile "org.grails.plugins:geb"
     testRuntime "org.seleniumhq.selenium:selenium-htmlunit-driver:2.47.1"
     testRuntime "net.sourceforge.htmlunit:htmlunit:2.18"
-
-
-
 }
 
 bootRun {
