--- a/grails-app/conf/application.yml
+++ b/grails-app/conf/application.yml
@@ -7,9 +7,9 @@ grails:
         transactionManagement:
             proxies: false
     gorm:
-        # Whether to autowire entities. 
+        # Whether to autowire entities.
         # Disabled by default for performance reasons.
-        autowire: false         
+        autowire: false
         reactor:
             # Whether to translate GORM events into Reactor events
             # Disabled by default for performance reasons
@@ -84,6 +84,11 @@ grails:
                 scriptlets: html
                 taglib: none
                 staticparts: none
+    mail:
+      host: 'smtp.mailtrap.io'
+      port: 2525
+      username: 'ed63427669febf'
+      password: '55b865b7929656'
 endpoints:
     jmx:
         unique-names: true
