--- a/build.gradle
+++ b/build.gradle
@@ -46,6 +46,8 @@ dependencies {
     //Added for user registration email validation
     compile 'org.grails.plugins:mail:2.0.0.RC6'
 
+    compile 'org.grails.plugins:hibernate4:5.0.4'
+
     compile "org.hibernate:hibernate-core:5.1.3.Final"
     compile "org.hibernate:hibernate-ehcache:5.1.3.Final"
     console "org.grails:grails-console"
